skeplib/tests/fixtures/parser/valid/escaped_strings.sk
fn main() -> Int {
  io.println("line1\\nline2\\t\\\"ok\\\"");
  return 0;
}
