skeplib/tests/fixtures/parser/invalid/import_bad_dotted_path.sk
import a..b;

fn main() -> Int {
  return 0;
}
